@@ -1,3 +1,8 @@
+2014-02-13  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* auth-source.el (auth-sources): Add pointer to what the .gpg extension
+	in `auth-sources' means and link to EPA docs.
+
 2014-02-12  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* nnmail.el (nnmail-expand-newtext): Further sub-match fixups
